# affiliate-backend

./: .dev.env  .env  .gitignore  .ruff.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
core/: manage.py
core/api/: urls.py
core/api/affiliatedata/: apps.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
core/api/affiliatedata/management/commands/: parse_carriers.py
core/api/affiliatedata/migrations/: 0001_initial.py
core/api/affiliatedata/utils/: swagger_schemas.py
core/project/: celery.py  celeryconfig.py  periodic_tasks.py  urls.py
core/project/settings/: __init__.py  base.py  custom.py  database.py  rest.py  security.py
core/project/settings/templates/: settings.dev.py  settings.local.py  settings.prod.py
local/: settings.dev.py  settings.prod.py
scripts/: entrypoint.sh
